adds apiserver build step; adds rolebinding for proxy server
